API - Adding Search Artist Endpoint
