# app/Http/Controllers/Api/ArtistController.php
@@ -82,4 +82,54 @@ class ArtistController extends BaseController
     {
         return new ArtistResource($artist->load('songs', 'songs.themes', 'songs.themes.anime', 'members', 'groups', 'externalResources'));
     }
+
+    /**
+     * Search resources
+     *
+     * @OA\Get(
+     *     path="/artist/search",
+     *     operationId="searchArtists",
+     *     tags={"Artist"},
+     *     summary="Get paginated listing of Artists",
+     *     description="Returns listing of Artists",
+     *     @OA\Parameter(
+     *         description="The search query. Wildcards '*' and '?' are supported. Mapping is to artist.name and artist.songs.pivot.as.",
+     *         example="Senjougahara",
+     *         name="q",
+     *         in="query",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *         description="The number of resources to return per page. Acceptable range is [1-100]. Default value is 100.",
+     *         example=50,
+     *         name="limit",
+     *         in="query",
+     *         required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         description="The comma-separated list of fields to include by dot notation. Wildcards are supported. If unset, all fields are included.",
+     *         example="artists.\*.name,\*.alias",
+     *         name="fields",
+     *         in="query",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful",
+     *         @OA\JsonContent(@OA\Property(property="artists",type="array", @OA\Items(ref="#/components/schemas/ArtistResource")))
+     *     )
+     * )
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function search()
+    {
+        $artists = Artist::search(strval(request('q')))->query(function ($builder) {
+            $builder->with('songs', 'songs.themes', 'songs.themes.anime', 'members', 'groups', 'externalResources');
+        })->paginate($this->getPerPageLimit());
+        return new ArtistCollection($artists);
+    }
 }
